--- a/mi-aplicacion/src/pages/LandingPage/components/Welcome.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/Welcome.css
@@ -14,6 +14,8 @@
 
 .landing-container h1 {
     font-family: Georgia, 'Times New Roman', Times, serif;
+    /* font-family: Artaza-regular;
+    line-height: 3.5rem; */
     font-weight: 100;
     font-size: 3.5rem;
     text-align: center;
