--- a/mi-aplicacion/src/pages/Properties/components/FilterProperty.css
+++ b/mi-aplicacion/src/pages/Properties/components/FilterProperty.css
@@ -2,32 +2,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2rem;
-    padding-top: 3rem;
-    margin-bottom: 2rem;
+    padding: 1rem;
+    padding-top: 2.5rem;
+    margin-bottom: 0rem;
     text-align: center;
     background-color: transparent;
-    border-radius: 10px;
 }
 
 .search-form h1 {
-    width: 60%;
+    width: 55%;
     font-size: 1.8rem;
     font-weight: 400;
     line-height: 1.6;
     color: var(--dark-color);
-    margin-bottom: 1.6rem;
+    margin: 0;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    min-height: 139px;
 }
-
-/* .search-form h5 {
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    color: var(--corporative-color);
-    font-size: 0.5rem;
-    font-weight: 500;
-    margin-bottom: 1rem;
-} */
 
 .dropdown-container {
     position: relative;
@@ -36,6 +27,8 @@
 
 .search-form i {
     font-style: italic;
+    /* transform: skewX(-9deg) !important;
+    display: inline-block;  */
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: var(--dark-color);
     cursor: pointer;
@@ -45,10 +38,6 @@
     transition: color 0.3s ease, border-color 0.3s ease;
 }
 
-.search-form i:hover {
-    color: #003d7e;
-    border-color: #003d7e;
-}
 
 .circle-button {
     display: inline-flex;
@@ -59,7 +48,7 @@
     height: 24px;
     margin-left: 8px;
     background-color: var(--dark-color);
-    color: white;
+    color: var(--light-color);
     border-radius: 50%;
     font-size: 1.4rem;
     font-weight: 100;
@@ -68,6 +57,10 @@
     user-select: none;
     line-height: 0;
     padding-bottom: 2px;
+    font-family: Artaza-regular;
+    position: relative;
+    top: -4px; 
+    
 }
 
 .dropdown-menu {
@@ -92,7 +85,7 @@
     cursor: pointer;
     transition: background-color 0.2s ease;
     text-align: left;
-    color: var(--corporative-color);
+    color: var(--dark-color);
     border-bottom: 1px solid #f0f0f0;
 }
 
@@ -104,6 +97,18 @@
     background-color: #f8f9fa;
 }
 
+
+
+
+.button-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    margin-top: 20px;
+}
+
 .view-results-button {
     background-color: transparent;
     color: var(--dark-color);
@@ -111,7 +116,7 @@
     padding: 10px 24px;
     border-radius: 6px;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     font-weight: 500;
     cursor: pointer;
     cursor: pointer;
@@ -137,16 +142,33 @@
     width: 60%
 }
 
-.view-results-button:active {
-    transform: translateY(0);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+.reset-button-container {
+    min-width: 80px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-/* Estilos para mensajes de resultados */
-.properties-count {
-    margin: 1rem 2rem;
-    font-size: 0.9rem;
-    color: #666;
+.reset-button {
+    background-color: transparent;
+    color: var(--dark-color);
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1.3rem;
+    font-weight: 200;
+    transition: scale 0.3s;
+}
+
+.reset-button:hover {
+    scale: 1.2;
+}
+
+.reset-button-placeholder {
+    width: 100%;
+    height: 40px;
 }
 
 .no-results {
@@ -155,7 +177,6 @@
     color: #666;
 }
 
-/* Responsividad */
 @media (max-width: 768px) {
     .search-form h1 {
         font-size: 1.1rem;
