--- a/mi-aplicacion/src/pages/LandingPage/Landing.css
+++ b/mi-aplicacion/src/pages/LandingPage/Landing.css
@@ -18,5 +18,5 @@
     margin-top: 100vh;
     background-color: var(--light-color);
     min-height: 100vh;
-    box-shadow: 0 -10px 20px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 -10px 20px rgba(0, 0, 0, 0.1); */
 }
