--- a/mi-aplicacion/src/pages/LandingPage/components/PropertiesLand.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/PropertiesLand.css
@@ -5,11 +5,9 @@
     display: flex;
     flex-direction: column;
     background-color: var(--light-color);
-
 }
 
 .propertiesland-inner {
-    /* padding: 2.5rem 3rem; */
     margin-left: 3rem;
     margin-right: 3rem;
     margin-top: 0rem;
@@ -21,7 +19,6 @@
     gap: 2rem;
     border-top: 2px solid var(--dark-color);
     padding-bottom: 5rem;
-    /* border-bottom: 2px solid var(--dark-color); */
 }
 
 .propertiesland-left {
@@ -37,7 +34,23 @@
     height: auto;
     object-fit: cover;
     max-width: 580px;
+    opacity: 0; 
 }
+
+.section-propertiesland.visible .propertiesland-left img {
+    animation: fadeIn 2s ease forwards;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(40px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+  }
 
 .propertiesland-right {
     flex: 1;
@@ -55,7 +68,6 @@
     text-transform: uppercase;
     text-align: right;
     align-self: flex-end !important;
-    /* margin-top: 0; */
 }
 
 .propertiesland-right h3 {
