--- a/mi-aplicacion/src/pages/LandingPage/components/BuyHomes.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/BuyHomes.css
@@ -5,7 +5,7 @@
   }
 
 .buyhomes-container {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)), url('/images/salon2.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)), url('/images/cocina2.jpg');
     border-radius: 10rem;
     overflow: hidden;
     background-size: cover;
