--- a/mi-aplicacion/src/pages/Properties/Properties.css
+++ b/mi-aplicacion/src/pages/Properties/Properties.css
@@ -1,8 +1,8 @@
 /* Properties.css */
 .properties-container {
-    margin-top: 10rem;
+    /* margin-top: 8rem; */
+    margin-top: 0rem;
     margin-bottom: 5rem;
-
 }
 
 .filter-properties {
