--- a/mi-aplicacion/src/pages/Properties/components/FilterProperty.css
+++ b/mi-aplicacion/src/pages/Properties/components/FilterProperty.css
@@ -2,22 +2,62 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1rem;
-    padding-top: 2.5rem;
+    /* padding: 1rem;
+    padding-top: 4.5rem; */
     margin-bottom: 0rem;
     text-align: center;
     background-color: transparent;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/images/detalleCocina.jpg');
+    background-size: cover;
+    background-position: center 80%;
+    width: 100%;
+    height: 90vh;
+    justify-content: center;
 }
+.search-form h2 {
+    padding-top: 9rem;
+    width: 55%;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.6;
+    color: var(--light-color);
+    margin: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-transform: uppercase;
 
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    will-change: transform, opacity;
+    opacity: 0;
+    animation: fadeIn 1.2s ease-out forwards;
+    animation-delay: 0.4s;
+}
 .search-form h1 {
     width: 55%;
     font-size: 1.8rem;
     font-weight: 400;
     line-height: 1.6;
-    color: var(--dark-color);
+    color: var(--light-color);
     margin: 0;
     font-family: Georgia, 'Times New Roman', Times, serif;
     min-height: 139px;
+
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    will-change: transform, opacity;
+    opacity: 0;
+    animation: fadeIn 1.2s ease-out forwards;
+    animation-delay: 0.6s;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 .dropdown-container {
@@ -30,7 +70,7 @@
     /* transform: skewX(-9deg) !important;
     display: inline-block;  */
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: var(--dark-color);
+    color: var(--light-color);
     cursor: pointer;
     position: relative;
     padding: 0 2px;
@@ -47,8 +87,8 @@
     width: 24px;
     height: 24px;
     margin-left: 8px;
-    background-color: var(--dark-color);
-    color: var(--light-color);
+    background-color: var(--light-color);
+    color: var(--dark-color);
     border-radius: 50%;
     font-size: 1.4rem;
     font-weight: 100;
@@ -59,8 +99,8 @@
     padding-bottom: 2px;
     font-family: Artaza-regular;
     position: relative;
-    top: -4px; 
-    
+    top: -4px;
+
 }
 
 .dropdown-menu {
@@ -107,11 +147,17 @@
     align-items: center;
     gap: 15px;
     margin-top: 20px;
+
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    will-change: transform, opacity;
+    opacity: 0;
+    animation: fadeIn 1.2s ease-out forwards;
+    animation-delay: 0.8s;
 }
 
 .view-results-button {
     background-color: transparent;
-    color: var(--dark-color);
+    color: var(--light-color);
     border: none;
     padding: 10px 24px;
     border-radius: 6px;
@@ -132,7 +178,7 @@
     bottom: 8px;
     width: 75%;
     height: 1.5px;
-    background-color: var(--dark-color);
+    background-color: var(--light-color);
     transform: translateX(-50%);
     transition: width 0.3s ease;
 
@@ -152,7 +198,7 @@
 
 .reset-button {
     background-color: transparent;
-    color: var(--dark-color);
+    color: var(--light-color);
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
