--- a/mi-aplicacion/src/pages/LandingPage/components/BuyHomes.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/BuyHomes.css
@@ -9,7 +9,7 @@
     border-radius: 10rem;
     overflow: hidden;
     background-size: cover;
-    background-position: center;
+    background-position: center 70%;
     width: 100%;
     height: 80vh;
     display: flex;
