--- a/mi-aplicacion/src/pages/Properties/components/PropertyCart.css
+++ b/mi-aplicacion/src/pages/Properties/components/PropertyCart.css
@@ -35,7 +35,38 @@
     transform: scale(1.1);
 }
 
+/* Añade estos estilos a tu CSS existente */
 
+/* Overlay blanquecino que aparece en hover */
+.property-card__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background-color: rgba(243, 241, 233, 0.5); */
+    background-color: var(--light-transparent-color);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+/* Texto "Ver detalles" */
+.property-card__view-details {
+    color: var(--dark-color);
+    font-size: 1rem;
+    font-weight: 500;
+    letter-spacing: 1px;
+    padding: 10px 20px;
+}
+
+/* Mostrar el overlay y el texto al hacer hover */
+.property-card:hover .property-card__overlay {
+    opacity: 1;
+}
 
 
 
