--- a/mi-aplicacion/src/pages/Contact/Contact.css
+++ b/mi-aplicacion/src/pages/Contact/Contact.css
@@ -4,34 +4,139 @@
     padding-top: 10rem;
 }
 
+.welcome-contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 0rem 3rem;
+    /* border-bottom: 1px solid var(--taupe-color); */
+}
+.welcome-contact h1 {
+    /* border-bottom: 1px solid var(--taupe-color); */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;}
+.line-1, .line-2, .line-3{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 100;
+    color: var(--dark-color);
+}
+.line-1 {
+    /* font-weight: bold; */
+    /* display: block; */
+    font-size: 3rem;
+    width: 61%;
+
+  }
+  
+  .line-2 {
+    /* font-style: italic; */
+    font-size: 1rem;
+    width: 40%;
+    font-family: 'Scto Grotesk A', Helvetica, Arial, sans-serif;
+  }
+  
+  .line-3 {
+    font-size: 1rem;
+    margin-bottom: 2rem;
+  }
+
 .picture-and-text {
     display: flex;
     flex-direction: row;
     margin-bottom: 3rem;
+    color: var(--dark-color);
 }
 
-.contact-info {
-    flex: 0.45;
+/* .contact-info {
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
     padding: 0 3rem;
+    font-weight: 100;
+    border-radius: 50% 50% 50% 50% / 35% 35% 35% 35%;
+    border: 1px solid var(--taupe-color);
+    aspect-ratio: 3/4.5;
+    background-color: var(--light-color);
+} */
+
+.contact-info {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    box-sizing: border-box; /* Asegura que el padding esté incluido en el tamaño total */
+    padding: 0 3rem; /* El padding exterior */
+    font-weight: 100;
+    /* aspect-ratio: 3/4.5; */
+    height: auto;
+    position: relative; /* Para el pseudo-elemento */
+    overflow: hidden; /* Para que el pseudo-elemento no se salga */
+}
+
+/* Usar un pseudo-elemento para crear el borde interno */
+.contact-info::before {
+    content: '';
+    position: absolute;
+    /* top: 3rem;  */
+    left: 3rem; /* Igual al padding izquierdo */
+    right: 3rem; /* Igual al padding derecho */
+    /* bottom: 3rem;  */
+    height: calc(100% - 0.2rem);
+    border: 1px solid var(--taupe-color);
+    border-radius: 50% 50% 50% 50% / 35% 35% 35% 35%;
+    background-color: var(--light-color);
+    z-index: -1; /* Colocar detrás del contenido */
+}
+
+
+
+.contact-info h1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.contact-location {
+    color: var(--taupe-color);
+}
+.contact-info h4{
+    padding-top: 1rem;
+    margin-bottom: 0;
+    text-transform: uppercase;
+    font-weight: 400;
+}
+.contact-info h5{
+    margin-bottom: 0;
 }
 
 .contact-picture {
-    flex: 0.55;
+    flex: 1;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     padding: 0 3rem;
 }
 
 .contact-picture img {
     width: 100%;
-    height: auto;
+    /* height: auto; */
+    aspect-ratio: 3/4.5;
+
     object-fit: cover;
     /* max-width: 580px; */
     border-radius: 50% 50% 50% 50% / 35% 35% 35% 35%;
+    object-fit: cover;
+    object-position: center;
 }
