--- a/mi-aplicacion/src/pages/Properties/components/FilterProperty.css
+++ b/mi-aplicacion/src/pages/Properties/components/FilterProperty.css
@@ -12,6 +12,18 @@
     height: 90vh;
     justify-content: center;
 }
+
+/* .search-form h2 {
+    padding-top: 9rem;
+    width: 55%;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.6;
+    color: var(--light-color);
+    margin: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-transform: uppercase;
+} */
 .search-form h2 {
     padding-top: 9rem;
     width: 55%;
@@ -28,6 +40,16 @@
     animation: fadeIn 1.2s ease-out forwards;
     animation-delay: 0.4s;
 }
+/* .search-form h1 {
+    width: 55%;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.6;
+    color: var(--light-color);
+    margin: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    min-height: 139px;
+} */
 .search-form h1 {
     width: 55%;
     font-size: 1.8rem;
@@ -134,6 +156,14 @@
 
 
 
+/* .button-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    margin-top: 20px;
+} */
 .button-container {
     display: flex;
     flex-direction: column;
@@ -148,6 +178,18 @@
     animation-delay: 0.8s;
 }
 
+/* .view-results-button {
+    background-color: transparent;
+    color: var(--light-color);
+    border: none;
+    padding: 10px 24px;
+    border-radius: 6px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.4rem;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+} */
 .view-results-button {
     background-color: transparent;
     color: var(--light-color);
