--- a/mi-aplicacion/src/index.css
+++ b/mi-aplicacion/src/index.css
@@ -51,7 +51,7 @@ body {
 
 :root {
   --corporative-color: #0D6785;
-  --light-color: #F3F1E9;
+  --light-color: #F1F1ED;
   --light-transparent-color: #f1f1edc7;
   --light-transparent-gradient: linear-gradient(to top, rgba(243, 241, 233, 0.8), rgba(243, 241, 233, 0));
   --nude-color: #E1D7D0;
