--- a/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
@@ -1,89 +1,12 @@
-/* .carousel-container {
-    width: 100%;
-    max-width: 100%;
-    position: relative;
-    overflow: hidden; 
-    background-color: var(--light-color);
-}
-
-.carousel-wrapper {
-    width: 100%;
-    overflow-x: hidden; 
-    scrollbar-width: none; 
-    -ms-overflow-style: none; 
-    margin: 60px 0;
-    margin-left: 3rem;
-    margin-top: 0rem;
-    margin-bottom: 6rem;
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
-}
-
-.carousel-wrapper::-webkit-scrollbar {
-    display: none; 
-}
-
-.carousel-content {
-    display: flex;
-    gap: 50px;
-}
-
-.carousel-item {
-    flex: 0 0 calc(20% - 16px); 
-    min-width: calc(20% - 16px);
-
-}
-
-.image-container {
-    position: relative;
-    width: 100%;
-    padding-top: 133.33%; 
-    overflow: hidden;
-}
-
-.image-container img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-
-.carousel-arrow {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 40px;
-    height: 40px;
-    background-color: rgba(255, 255, 255, 0.8);
-    border: none;
-    border-radius: 50%;
-    font-size: 18px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    z-index: 10;
-    transition: opacity 0.3s ease;
-}
-
-.left-arrow {
-    left: 10px;
-}
-
-.right-arrow {
-    right: 10px;
-} */
-
 .carousel-container {
     width: 100%;
     max-width: 100%;
     position: relative;
     overflow: visible; /* Cambiado de hidden a visible para permitir que los botones estén fuera */
-    background-color: var(--light-color);
-    padding-bottom: 10rem; /* Espacio para los botones de navegación */
+    background-color: var(--taupe-color);
+    padding-bottom: 5rem; /* Espacio para los botones de navegación */
+    padding-top: 1rem; 
+    /* height: 90vh; */
 }
 
 .carousel-wrapper {
@@ -152,7 +75,7 @@
     margin-top: 20px;
     position: absolute;
     margin-right: 3rem;
-    bottom: 8rem; /* Ajustado para situar los botones más arriba */
+    top: 2rem; /* Ajustado para situar los botones más arriba */
     left: 0;
     right: 0;
 }
@@ -161,7 +84,8 @@
     width: 40px;
     height: 40px;
     background-color: transparent;
-    border: 1px solid var(--dark-color);
+    /* border: 1px solid var(--dark-color); */
+    border: 1px solid var(--light-color);
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -169,14 +93,41 @@
     cursor: pointer;
     transition: background-color 0.3s ease, opacity 0.3s ease;
 }
-
-.carousel-button:hover {
-    background-color: var(--nude-color);
+.carousel-button svg {
+    fill: var(--light-color); /* Cambia el color de relleno del SVG */
+    /* o */
+    color: var(--light-color); /* Para iconos que usan currentColor */
 }
+
+/* .carousel-button:hover {
+    background-color: var(--nude-color);
+} */
 
 /* Clase para hacer invisible el botón pero manteniendo su espacio */
 .carousel-button.invisible {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+}
+
+
+
+
+
+
+
+
+.carousel-location {
+    padding: 0rem 3rem;
+}
+
+.carousel-location h3 {
+    font-size: 2rem;
+    font-weight: 100;
+    /* color: var(--dark-color); */
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-bottom: 1.4rem;
+    padding-bottom: 1.5rem;
+    border-bottom: 2px solid var(--light-color);
+    color: var(--light-color);
 }
