--- a/mi-aplicacion/src/components/Button/Button.css
+++ b/mi-aplicacion/src/components/Button/Button.css
@@ -52,7 +52,7 @@
 
 .custom-button:hover {
     cursor: pointer;
-    background-color: var(--corporative-color);
+    background-color: var(--dark-color);
     color: var(--light-color);
     border: 1px solid var(--light-color);
 }
