--- a/mi-aplicacion/src/pages/Buy/components/BuyForm.css
+++ b/mi-aplicacion/src/pages/Buy/components/BuyForm.css
@@ -1,9 +1,34 @@
+.buy-form-wrapper {
+    display: flex;
+    flex-direction: row;
+}
+
+.picture-form {
+    flex: 0.55;
+    padding: 0rem 3rem;
+    padding-right: 2rem;
+    box-sizing: border-box;
+
+}
+
+.picture-form img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    /* max-width: 580px; */
+    /* opacity: 0; */
+    border-radius: 50% 50% 50% 50% / 35% 35% 35% 35%;
+}
+
 .buy-form-container {
+    flex: 0.45;
     /* padding-top: 10rem; */
     max-width: 800px;
     margin: 0 auto;
-    /* padding: 2rem; */
+    padding: 1rem 5rem;
     color: var(--dark-color);
+    margin-bottom: 5rem;
+    box-sizing: border-box;
 }
 
 .form-title {
@@ -11,6 +36,7 @@
     font-size: 2.5rem;
     font-weight: 400;
     margin-bottom: 1rem;
+    margin-top: 0;
 }
 
 .form-description {
@@ -22,12 +48,12 @@
 .buy-form {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 0rem;
 }
 
 .form-section {
     border-bottom: 1px solid #eee;
-    padding-bottom: 1.5rem;
+    padding-bottom: 0rem;
 }
 
 .form-section h3 {
@@ -65,23 +91,31 @@ select,
 textarea {
     width: 100%;
     padding: 0.8rem;
-    border: 1px solid #ddd;
-    border-radius: 4px;
+    border: 1px solid var(--dark-color);
+    border-radius: 0px;
     font-size: 1rem;
     transition: border-color 0.2s;
+    background-color: transparent;
+    color: var(--dark-color);
 }
 
 input:focus,
 select:focus,
 textarea:focus {
     outline: none;
-    border-color: var(--corporative-color);
+    /* border-color: var(--corporative-color); */
+    border: 1.5px solid var(--corporative-color);
 }
 
 .radio-group {
     display: flex;
-    gap: 1.5rem;
-    margin-top: 0.5rem;
+    align-items: center;
+    gap: 0.5rem;
+    cursor: pointer;
+}
+
+.radio-label input[type="radio"] {
+    accent-color: var(--corporative-color); /* Forma moderna de cambiar el color del radio button */
 }
 
 .radio-label {
@@ -108,7 +142,7 @@ textarea:focus {
 }
 
 .required {
-    color: #d32f2f;
+    color: var(--corporative-color);
     margin-left: 0.25rem;
 }
 
@@ -141,7 +175,7 @@ textarea:focus {
     padding: 1rem 2rem;
     font-size: 1.1rem;
     font-weight: 500;
-    border-radius: 4px;
+    border-radius: 0px;
     cursor: pointer;
     transition: background-color 0.2s;
     margin-top: 1rem;
