--- a/mi-aplicacion/src/pages/LandingPage/components/InmoLocation.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/InmoLocation.css
@@ -55,18 +55,24 @@
 }
 
 .inmolocation-left h1 {
-    font-size: 4rem;
+    font-size: 3.5rem;
     font-weight: 100;
     color: var(--dark-color);
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-transform: uppercase;
+    /* margin: 0;
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+    border-bottom: 1px solid var(--dark-color); */
 }
 
 .inmolocation-left h3 {
+    /* padding-top: 3rem; */
     font-size: 1.1rem;
     font-weight: 100;
     width: 80%;
     line-height: 1.5rem;
+    margin-bottom: 3rem;
 }
 
 @keyframes fadeIn {
