--- a/mi-aplicacion/src/pages/LandingPage/components/PropertiesLand.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/PropertiesLand.css
@@ -100,7 +100,7 @@
 }
 
 .propertiesland-right h1 {
-    font-size: 4rem;
+    font-size: 3.5rem;
     font-weight: 100;
     color: var(--dark-color);
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -114,4 +114,5 @@
     font-weight: 100;
     width: 80%;
     line-height: 1.5rem;
+    margin-bottom: 3rem;
 }
