--- a/mi-aplicacion/src/pages/Sell/components/SellForm.css
+++ b/mi-aplicacion/src/pages/Sell/components/SellForm.css
@@ -1,32 +1,37 @@
 .sell-form-container {
-    max-width: 800px;
+    max-width: 700px;
     margin: 0 auto;
     /* padding: 2rem; */
     color: var(--dark-color);
+    margin-bottom: 5rem;
 }
 
-.form-title {
+.form-title-sell {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 2.5rem;
     font-weight: 400;
     margin-bottom: 1rem;
+    text-align: center;
 }
 
-.form-description {
+.form-description-sell {
     font-size: 1.1rem;
     margin-bottom: 2rem;
     line-height: 1.6;
+    text-align: center;
 }
 
-.sell-form {
+.sell-form-sell {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 0rem;
+    width: 100%;
+    /* align-items: center; */
 }
 
 .form-section {
     border-bottom: 1px solid #eee;
-    padding-bottom: 1.5rem;
+    padding-bottom: 0rem;
 }
 
 .form-section h3 {
@@ -64,17 +69,20 @@ select,
 textarea {
     width: 100%;
     padding: 0.8rem;
-    border: 1px solid #ddd;
-    border-radius: 4px;
+    border: 1px solid var(--dark-color);
+    border-radius: 0px;
     font-size: 1rem;
     transition: border-color 0.2s;
+    background-color: transparent;
+    color: var(--dark-color);
 }
 
 input:focus,
 select:focus,
 textarea:focus {
     outline: none;
-    border-color: var(--corporative-color);
+    /* border-color: var(--corporative-color); */
+    border: 1.5px solid var(--corporative-color);
 }
 
 .radio-group {
@@ -88,6 +96,13 @@ textarea:focus {
     align-items: center;
     gap: 0.5rem;
     cursor: pointer;
+    background-color: transparent;
+    
+}
+
+.radio-label input[type="radio"] {
+    accent-color: var(--corporative-color); /* Forma moderna de cambiar el color del radio button */
+    background-color: transparent;
 }
 
 .price-input {
@@ -107,7 +122,7 @@ textarea:focus {
 }
 
 .required {
-    color: #d32f2f;
+    color: var(--corporative-color);
     margin-left: 0.25rem;
 }
 
@@ -140,7 +155,7 @@ textarea:focus {
     padding: 1rem 2rem;
     font-size: 1.1rem;
     font-weight: 500;
-    border-radius: 4px;
+    border-radius: 0px;
     cursor: pointer;
     transition: background-color 0.2s;
     margin-top: 1rem;
