--- a/mi-aplicacion/src/pages/IndividualHome/IndividualHome.css
+++ b/mi-aplicacion/src/pages/IndividualHome/IndividualHome.css
@@ -6,13 +6,42 @@
     display: flex;
     flex-direction: column;
     background-color: var(--light-color);
+    margin-bottom: 5rem;
+
 }
 
 .individual-home-maininfo {
-    margin-top: 10rem;
+    margin-top: 12rem;
     display: flex;
     flex-direction: column;
-    align-items: center;}
+    align-items: center;
+    margin-left: 8.5rem;
+    margin-right: 8.5rem;
+    border-bottom: 1px solid var(--dark-color);
+
+}
+.individual-home-maininfo h1{
+    color: var(--dark-color);
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
+    font-size: 2.4rem;
+    font-weight: 400;
+    margin-bottom: 1rem;
+    text-align: center;
+    line-height: 3rem;
+}
+.individual-home-maininfo h3{
+    color: var(--dark-color);
+    font-size: 1.5rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 200;
+    margin: 0;
+}
+.individual-home-maininfo p{
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
+    color: var(--corporative-color);
+    font-weight: 200;
+}
+
 
 
 
@@ -114,6 +143,9 @@
     flex: 0.3;
     display: flex;
     flex-direction: column;
+    border-bottom: 1px solid var(--dark-color);
+    padding-bottom: 2rem;
+
 }
 
 .general-list h5{
@@ -140,20 +172,23 @@
 .column-description {
     flex:0.7;
     display: flex;
+    /* margin-bottom: 1rem; */
+    border-bottom: 1px solid var(--dark-color);
+    padding-bottom: 2rem;
 }
 
 .column-description h1 {
     /* margin-bottom: 10rem; */
-    padding-left: 4rem;
+    padding-left: 6rem;
     margin-top: 0;
-    font-size: 1.7rem;
-    font-weight: 300;
+    font-size: 1.3rem;
+    font-weight: 400;
     width: 100%;
-    line-height: 2.75rem;
+    line-height: 2.25rem;
     font-style: italic;
     color: var(--dark-color);
     text-align: justify; /* Justifica el texto */
-    hyphens: auto; /* Permite la división de palabras con guiones */
+    /* hyphens: auto;  */
     text-justify: inter-word; /* Distribuye el espacio entre palabras */
 }
 
@@ -220,6 +255,35 @@
     flex-wrap: wrap; /* Permite que los elementos pasen a la siguiente línea si no caben */
     justify-content: space-between; /* Distribuye los elementos con espacio uniforme */
     gap: 1rem; 
+    border-bottom: 1px solid var(--dark-color);
+    padding-bottom: 2rem;
+}
+/* .list-1-c {
+    border-bottom: 1px solid rgba(128, 128, 128, 0.239);
+} */
+.list-1-c p {
+    font-size: 1.2rem;
+    font-weight: 300;
+    color: var(--dark-color);
+}
+
+.caracteristicas-list h5{
+    text-transform: uppercase;
+    font-weight: 100;
+    opacity: 0.7;
+    color: var(--dark-color);
+    letter-spacing: 1px;
+    font-size: 0.75rem;
+}
+
+.caracteristicas-info h3,
+.column-extras h3 {
+    text-transform: uppercase;
+    font-weight: 600;
+    /* opacity: 0.7; */
+    color: var(--dark-color);
+    letter-spacing: 1px;
+    font-size: 0.75rem;
 }
 
 .column-extras {
@@ -239,7 +303,8 @@
     list-style-type: none; /* Elimina las viñetas */
     width: 100%;
     box-sizing: border-box;
-
+    padding-bottom: 2rem;
+    border-bottom: 1px solid var(--dark-color);
 }
 
 .extras-list li {
