--- a/mi-aplicacion/src/components/Footer/Footer.css
+++ b/mi-aplicacion/src/components/Footer/Footer.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   background-color: var(--corporative-color);
   position: relative;
-  z-index: 10;
+  z-index: 1000;
 }
 
 .footer-content {
@@ -21,25 +21,29 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.5rem;
   /* Espacio entre elementos */
   justify-content: flex-start;
   font-weight: 100;
 }
 
 .footer-left h3 {
-  font-size: 1.3rem;
-  margin-bottom: 1rem;
-  font-weight: 500;
+  font-size: 1rem;
+  text-transform: uppercase;
+  margin-bottom: 3rem;
+  font-weight: 100;
   margin-top: 1rem;
-
+  /* font-family: Georgia, 'Times New Roman', Times, serif; */
+  letter-spacing: 1.2px;
 }
 
 .footer-left p {
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
   margin: 0.5rem 0;
   color: var(--light-color);
   font-weight: 100;
   font-size: 0.9rem;
+  opacity: 0.7;
 }
 
 
@@ -61,14 +65,14 @@
 .footer-center h2 {
   font-size: 2.2rem;
   margin-bottom: 1rem;
-  font-weight: 300;
+  font-weight: 100;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .footer-center p {
   margin-bottom: 0.8rem;
   font-size: 1rem;
   font-weight: 100;
-
 }
 
 
@@ -85,22 +89,26 @@
   flex-direction: column;
   gap: 0.5rem;
   justify-content: flex-start;
-
+  gap: 1.5rem;
 }
 
 .footer-right h3 {
-  font-size: 0.8rem;
-  margin-bottom: 20px;
-  font-weight: 300;
-  margin-top: 1rem;
+  font-size: 1rem;
   text-transform: uppercase;
+  margin-bottom: 2rem;
+  font-weight: 100;
+  margin-top: 1rem;
+  /* font-family: Georgia, 'Times New Roman', Times, serif; */
+  letter-spacing: 1.2px;
 }
 
 .footer-right p {
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
   margin: 5px 0;
   font-weight: 100;
   font-size: 0.9rem;
   color: var(--light-color);
+  opacity: 0.7;
 }
 
 
@@ -110,7 +118,7 @@
 
 .whatsapp-icon {
   text-align: center;
-  padding: 2.5rem 3rem;
+  padding: 1.5rem 3rem;
 }
 
 .whatsapp-icon img {
