--- a/mi-aplicacion/src/index.css
+++ b/mi-aplicacion/src/index.css
@@ -50,12 +50,12 @@ body {
 }
 
 :root {
-  --corporative-color: #0D6785;
+  --corporative-color: #144869;
   --light-color: #F1F1ED;
   --light-transparent-color: #f1f1edc7;
   --light-transparent-gradient: linear-gradient(to top, rgba(243, 241, 233, 0.8), rgba(243, 241, 233, 0));
   --nude-color: #E1D7D0;
-  --taupe-color: #AD9C87;
+  --taupe-color: #A68F6D;
   --dark-color: #3B3B3C;
 
   --main-font: 'Scto Grotesk A', Helvetica, Arial, sans-serif;
