--- a/mi-aplicacion/src/components/Header/Header.css
+++ b/mi-aplicacion/src/components/Header/Header.css
@@ -243,7 +243,7 @@
    }
 
    .nav-menu a:hover {
-       color: var(--taupe-color);
+       color: var(--corporative-color);
    }
 
    .menu-overlay {
